[metadata]
name = filefinder
author = Mathias Hauser
author_email = mathias.hauser@env.ethz.com
license = MIT
description = find and parse file and folder names
long_description_content_type=text/markdown
long_description = file: README.rst
url = https://github.com/mathause/filefinder
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
python_requires = >=3.6
install_requires =
    pandas
    parse

[flake8]
ignore=
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator

[isort]
profile = black
skip_gitignore = true
