[metadata]
name = filefisher
author = Mathias Hauser
author_email = mathias.hauser@env.ethz.com
license = MIT
description = find and parse file and folder names
long_description_content_type=text/markdown
long_description = file: README.md
url = https://github.com/mpytools/filefisher
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
python_requires = >=3.10
install_requires =
    numpy >=1.24
    pandas >=2.0
    parse >=1.19

[flake8]
ignore=
    # E203: whitespace before ':' - doesn't work well with black
    # E402: module level import not at top of file
    # E501: line too long - let black worry about that
    # E731: do not assign a lambda expression, use a def
    # W503: line break before binary operator
    E203, E402, E501, E731, W503

[isort]
profile = black
skip_gitignore = true

[coverage:run]
omit =
    */tests/*,
